# xlsxdatagrid

./: .gitignore  LICENSE.txt  README.md  index.html  pyproject.toml  search.json  test.xlsx  test1.xlsx
.github/workflows/: ci.yml  docs.yml  pypi-publish.yml  test-and-lint.yml  tests.yml
docs/: _codegen-issue-1624.ipynb  _dateteime-checks.ipynb  _quarto.yml  codegen-issue-1624.ipynb  frictionless-py-1678.qmd  get_examples.py  index.qmd  under-the-hood.qmd
docs/examples/: chart.md  from-schema-t.md  from-schema.md  many-sheets.md
examples/: chart.html  from-schema-t.html  from-schema.html  many-sheets.html
reference/: reference.txt
site_libs/bootstrap/: bootstrap-09db7b91c76ad24a862351fa19b58de7.min.css  bootstrap-94e427233ac8cdb2d19a650f325063c9.min.css  bootstrap-dark-ab04b8cf9a53d0e05d8132e2ed57779b.min.css  bootstrap-dark-cad6db429cd7bb5a19799e7468fdf4a5.min.css
src/xlsxdatagrid/: __init__.py  colours.py  read.py  write.py  xlsxdatagrid.py
src/xlsxdatagrid/demo_schemas/: __init__.py  dtypes.py
tests/: constants.py  csv_model.py  edit_tsv_records_model.py  frictionless.schema.json  model.py  schema-1.json  schema.json  test_examples.py  test_model.py  test_pytest_examples.py  test_read.py  test_write.py  test_xlsxdatagrid.py  transposed_tsv_model.py
tests/examples/: chart.md  from-schema-t.md  from-schema.md  many-sheets.md
tests/xl/: chart.xlsx  df-x-squared.xlsx  from-ds-api.xlsx  from-json-T.xlsx  from-json.xlsx  from-schema-T.xlsx  from-schema.xlsx  many-charts.xlsx  many-sheets.xlsx  simple-T.xlsx  simple.xlsx  test-many-sheets.xlsx  test-t.xlsx  test.xlsx  write-grid.xlsx
xl/: chart.xlsx  test-many-sheets.xlsx  test-t.xlsx  test.xlsx
