[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xlsxdatagrid"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jgunstone", email = "j.gunstone@maxfordham.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["xlsxwriter", "pydantic>2", "jsonref", "palettable", "pydantic_extra_types", "python-calamine", "datamodel-code-generator", "stringcase", "frictionless", "frictionless[pandas]"]

[project.urls]
Documentation = "https://github.com/maxfordham/xlsxdatagrid#readme"
Issues = "https://github.com/maxfordham/xlsxdatagrid/issues"
Source = "https://github.com/maxfordham/xlsxdatagrid"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/xlsxdatagrid/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/xlsxdatagrid tests}"

[tool.coverage.run]
source_pkgs = ["xlsxdatagrid", "tests"]
branch = true
parallel = true
omit = [
  "src/xlsxdatagrid/__about__.py",
]

[tool.coverage.paths]
xlsxdatagrid = ["src/xlsxdatagrid", "*/xlsxdatagrid/src/xlsxdatagrid"]
tests = ["tests", "*/xlsxdatagrid/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]